--- a/dark/my-colors.scss
+++ b/dark/my-colors.scss
@@ -1,6 +1,5 @@
-/* Build a Material theme */
-// To begin customizing your theme, modify these variables. By default each theme starts off with our baseline values, so you can easily swap them out.
-@use "sass:map";
+// Theme Colors
+// Must be hard-coded for Material mixins
 
 $primary-light: #92cbff; // --primaryLight
 $primary-light-hover: #92cbff4d; // --primaryLightHover
@@ -26,26 +25,4 @@ $slider-thumb-border: $input-background;
   $on-error: #ffffff, // --defaultText
   $surface: #1b2d3e, // --surfaceElements
   $on-surface: #ffffff, // --defaultText
-);
-
-@use "@material/typography" with (
-  $font-family: unquote("Roboto, sans-serif"),
-  $styles-headline1: (font-size: 2.125rem, letter-spacing: 0.25px, font-weight: normal),
-  $styles-headline2: (font-size: 1.5rem, font-weight: normal),
-  $styles-headline3: (font-size: 1.25rem, font-weight: 500, letter-spacing: 0.15px),
-  $styles-headline4: (font-size: 1.25rem, font-weight: 300, letter-spacing: 0.15px),
-  $styles-headline5: (font-size: 1.125rem, font-weight: normal),
-  $styles-headline6: (font-size: 1.125rem, font-weight: 300),
-  $styles-subtitle1: (font-size: 1rem, letter-spacing: 0.5px, font-weight: normal),
-  $styles-subtitle2: (font-size: 0.875rem, font-weight: normal, letter-spacing: 0.5px),
-  $styles-body1: (font-size: 1rem, letter-spacing: 0.5px, font-weight: normal),
-  $styles-body2: (font-size: 0.875rem, font-weight: normal, letter-spacing: 0.5px),
-  $styles-button: (
-    text-transform: none,
-    font-size: 1rem,
-    letter-spacing: 0.5px,
-    white-space: nowrap,
-    text-overflow: ellipsis,
-  ),
-  $styles-overline: (font-size: 0.75rem, font-weight: normal)
 );
