--- a/dark/app.scss
+++ b/dark/app.scss
@@ -5,7 +5,7 @@
 @use "my-colors";
 
 // Import Typography Settings
-@use "my-typography.scss";
+@use "my-typography";
 
 // Import component namespace for customization
 // NOTE: This allows mixins and properties to be called directly. Ex. `@include button.outline-color()`
@@ -36,7 +36,9 @@
 @use "@material/tab-indicator";
 @use "@material/tab";
 @use "@material/textfield";
+@use "@material/textfield/icon";
 @use "@material/top-app-bar";
+@use "@material/typography/mdc-typography";
 @use "@material/data-table";
 
 // Import styles for each MDC Web component
