--- a/dark/app.scss
+++ b/dark/app.scss
@@ -26,6 +26,7 @@
 @use "@material/menu";
 @use "@material/menu-surface";
 @use "@material/radio";
+@use "@material/ripple";
 @use "@material/rtl";
 @use "@material/select";
 @use "@material/shape";
@@ -44,7 +45,6 @@
 // Import styles for each MDC Web component
 @import "@material/slider/styles";
 @import "@material/button/mdc-button";
-
 @import "@material/card/mdc-card";
 @import "@material/checkbox/mdc-checkbox";
 @import "@material/chips/mdc-chips";
@@ -60,10 +60,7 @@
 @import "@material/menu/mdc-menu";
 @import "@material/menu-surface/mdc-menu-surface";
 @import "@material/radio/mdc-radio";
-// @import "@material/rtl/mixins";
 @import "@material/select/mdc-select";
-// @import "@material/shape/mixins";
-// @import "@material/shape/functions";
 @import "@material/snackbar/mdc-snackbar";
 @import "@material/switch/mdc-switch";
 @import "@material/tab-bar/mdc-tab-bar";
@@ -74,7 +71,6 @@
 @import "@material/textfield/helper-text/index";
 @import "@material/theme/color-palette";
 @import "@material/theme/functions";
-// @import "@material/ripple/mixins";
 @import "@material/theme/mixins";
 @import "@material/top-app-bar/mdc-top-app-bar";
 @import "@material/typography/mdc-typography";
@@ -83,7 +79,7 @@
 // Import global Material Theming typography and fonts
 @import "my-theme";
 
-// Import site-specific SCSS file
+// Import index.html Styling
 @import "my-layout";
 
 // Import theme-specific component SCSS files
